# snake

./: .env.example  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Containerfile  Containerfile.ubi  README.md  SECURITY_AUDIT.md  clippy.toml  deny.toml  docker-compose.yml  flake.nix  rustfmt.toml  snake.xml
.github/: pull_request_template.md
.github/workflows/: ci.yml
backend/: Cargo.toml
backend/src/: bootstrap.rs  config.rs  error.rs  ip.rs  lib.rs  main.rs  metrics.rs  middleware.rs  router.rs  state.rs
backend/src/routes/: leaderboard.rs  metrics_endpoint.rs  mod.rs  pages.rs  pwa_manifest.rs  ready.rs
backend/src/routes/auth/: cookie.rs  mod.rs  origin_check.rs  pin_required.rs  rate_limit.rs  verify_pin.rs
backend/src/services/: session.rs
backend/tests/: edge_cases.rs  leaderboard.rs  metrics.rs  origin_check.rs  ready.rs
backend/tests/common/: mod.rs
frontend/: Cargo.toml  index.html  service-worker.js
frontend/Assets/: app.css  manifest.json
frontend/scripts/: optimise-wasm.rs  optimise-wasm.sh
frontend/src/: app.rs  i18n.rs  storage.rs
frontend/src/app/: update.rs  view.rs
frontend/src/components/: event_listener.rs  pin.rs  snake_board.rs  snake_game.rs  snake_logic.rs  snake_state.rs
frontend/src/components/snake/: actions.rs  food.rs  keys.rs  mod.rs  state.rs  tick.rs
