[package]
name = "frontend"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Yew frontend application for Snake."
readme = "../README.md"

[dependencies]
yew = { version = "0.23", features = ["csr"] }
wasm-bindgen = "=0.2.121"
js-sys = "=0.3.98"
wasm-bindgen-futures = "=0.4.71"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
gloo-net = { version = "0.7", features = ["websocket", "http"] }
gloo-timers = { version = "0.4", features = ["futures"] }
shared-frontend = { git = "https://github.com/studio2201/shared-assets", tag = "v3.0.32" }
shared-core = { git = "https://github.com/studio2201/shared-assets", tag = "v3.0.32" }
futures-util = "0.3"
futures-channel = "0.3"
percent-encoding = "2.3"
web-sys = { version = "=0.3.98", features = [
    "HtmlTextAreaElement",
    "HtmlInputElement",
    "HtmlSelectElement",
    "HtmlElement",
    "KeyboardEvent",
    "FocusEvent",
    "Window",
    "Document",
    "Location",
    "History",
    "UrlSearchParams",
    "Navigator",
    "Clipboard",
    "Node",
    "NodeList",
    "Element",
    "NamedNodeMap",
    "Attr"
]}

[dev-dependencies]
wasm-bindgen-test = "0.3"
